# opencv-starter

./: .gitignore  CMakeLists.txt  Makefile  README.md  version.h.in  wrapmake.sh
docker/: Dockerfile.build
src/: CMakeLists.txt  main.cpp
